# fastflag

./: CMakeLists.txt  README.md
.github/workflows/: build-exe.yml
src/: BinaryAnalyzer.cpp  BinaryAnalyzer.hpp  CacheManager.cpp  CacheManager.hpp  Logger.cpp  Logger.hpp  MemoryVerifier.cpp  MemoryVerifier.hpp  ResultDumper.cpp  ResultDumper.hpp  RuntimeResolver.cpp  RuntimeResolver.hpp  Types.hpp  main.cpp
